<resources>
    <string name="app_name">coffeapp</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="store_name">K10 Coffee House</string>
    <string name="create_employee">Tạo mới nhân viên</string>
    <string name="full_name">Họ và tên</string>
    <string name="birth">Ngày sinh</string>
    <string name="startday">Ngày đăng ký</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="enterusername">Bạn quên nhập tên đăng nhập</string>
    <string name="enterpassword">Bạn quên nhập mật khẩu</string>
    <string name="enterfullname">Bạn quên nhập tên mình</string>
    <string name="themthanhcong">Thêm thành công</string>
    <string name="themthatbai">Thêm thất bại</string>
    <string name="reg">Đăng ký</string>
    <string name="homepage">Trang chủ</string>
    <string name="menu">Thực đơn</string>
    <string name="employeemanagement">Quản lý nhân viên</string>
    <string name="statiscal">Thống kê</string>
    <string name="setting">Cài đặt</string>
    <string name="open">Mở</string>
    <string name="close">Đóng</string>
    <string name="addtable">Thêm bàn ăn</string>
    <string name="tablename">Tên bàn ăn</string>
    <string name="yes">Đồng ý</string>
    <string name="exit">Thoát</string>
    <string name="failinfo">Nhập sai thông tin</string>
    <string name="addmen">Thêm thực đơn</string>
    <string name="nameoffood">Tên món ăn</string>
    <string name="food_price">Giá tiền</string>
    <string name="table">Bàn</string>
    <string name="addcategory">Thêm thoại thực đơn</string>
    <string name="category">Loại thực đơn</string>
    <string name="notifyplsenterdata">Vui lòng nhập dữ liệu</string>
    <string name="notify_add_success">Thêm thành công</string>
    <string name="notify_add_faild">Thêm thất bại</string>
    <string name="error_add_food">Vui lòng nhập đầy đủ thông tin</string>
    <string name="price">Giá: </string>
    <string name="quantity">Số lượng</string>
    <string name="payment">Thanh toán</string>
    <string name="sum_price">Tổng cộng: </string>
    <string name="payment_success">Thanh toán thành công</string>
    <string name="payment_faild">Thanh toán thất bại</string>
    <string name="delete">Xóa</string>
    <string name="edit">Sửa</string>
    <string name="delete_successful">Xóa thành công</string>
    <string name="delete_failed">Xóa thất bại</string>
    <string name="addmenu">Thêm thực đơn</string>
    <string name="addemployee">Thêm nhân viên</string>
    <string name="updateemployee">Cập nhật nhân viên</string>
    <string name="unabletoupdate">Không được sửa</string>
    <string name="editsucess">Sửa thành công</string>
    <string name="editfaild">Sửa thất bại</string>
    <string name="becomeManager">Nâng cấp quản lý</string>
    <string name="younotadmin">Bạn không phải là quản lý</string>
    <string name="logout">Đăng xuất</string>
    <string name="revenue">Quản lý doanh thu</string>
    <string name="totorevenue">Doanh thu: </string>
    <string name="username_already_exsists">Tên người dùng đã tồn tại</string>
    <string name="name_table_already_exsists">Tên bàn đã tồn tại</string>
    <string name="cancel">Hủy</string>

</resources>
