<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >
    <item
        android:id="@+id/itHomepage"
        android:title="@string/homepage"
        android:icon="@drawable/home_48px"
        android:checked="true"/>
        <item
            android:id="@+id/itMenu"
            android:title="@string/menu"
            android:icon="@drawable/food_and_wine_48px"
            />
    <item
        android:id="@+id/itProfile"
        android:title="@string/employeemanagement"
        android:icon="@drawable/waiter_48px"
        />

    <item
        android:id="@+id/itRevenue"
        android:title="@string/revenue"
        android:icon="@drawable/profit_48px"
        />
    <item
        android:id="@+id/itExitApp"
        android:title="@string/exit"
        android:icon="@drawable/settings_48px"
        />
    </group>
</menu>