<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorGreenPrimary"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/txtCreateEmployeeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Thêm nhân viên"
        android:layout_centerHorizontal="true"

        android:textStyle="bold"
        android:textSize="@dimen/size30sp"
        />

    <LinearLayout
        android:id="@+id/lnCreateEmployeeForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/txtCreateEmployeeTitle"
        >

        <EditText
            android:id="@+id/edFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/full_name"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/username"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/edPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/password"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/password"
            android:password="true"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            android:singleLine="true"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="@dimen/size50dp"
                >

                <RadioButton
                    android:id="@+id/rdMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true"
                    />

                <RadioButton
                    android:id="@+id/rdFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    />
            </RadioGroup>
            <Button
                android:id="@+id/btnUpgradeManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/becomeManager"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size10dp"
                android:background="@color/colorOrganButton"
                />
        </LinearLayout>
        <EditText
            android:id="@+id/edPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/phone_number"
            android:textColorHint="@color/colorGray"
            android:drawableLeft="@drawable/phone"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            />

        <EditText
            android:id="@+id/edBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/birth"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            />

        <EditText
            android:id="@+id/edStartDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/startday"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            android:numeric="integer"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:background="@color/colorGreenDark"
                android:padding="@dimen/size10dp"
                android:text="Đồng ý" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:background="@color/colorGreenDark"
                android:padding="@dimen/size10dp"
                android:text="Thoát"

                />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
