<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorGreenPrimary"
    tools:context=".Activity.LoginActivity">
    >
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logologin"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/lnLoginForm"
        />
    <LinearLayout
        android:id="@+id/lnLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/edlgUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/username"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            />
        <EditText
            android:id="@+id/edlgPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/password"
            android:textColorHint="@color/colorGray"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:textColor="@color/colorGray"
            android:password="true"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <Button
                android:id="@+id/btnlgLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size20dp"
                android:background="@color/colorGreenDark"/>
            <Button
                android:id="@+id/btnlgReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:padding="@dimen/size10dp"
                android:layout_margin="@dimen/size20dp"
                android:background="@color/colorGreenDark"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>